# TP2-Barrena-Otero

./: README.md  TP2-Barrena-Otero.docx  TP2_Barrena_Otero.docx
Trabajo Practico/punto 1/: CMakeLists.txt
Trabajo Practico/punto 1/example/: main.cpp
Trabajo Practico/punto 1/include/: pokedex.h  pokemon.h
Trabajo Practico/punto 1/src/: pokedex.cpp  pokemon.cpp
Trabajo Practico/punto 2/: CMakeLists.txt
Trabajo Practico/punto 2/example/: main.cpp
Trabajo Practico/punto 2/include/: Hangar.h
Trabajo Practico/punto 3/: CMakeLists.txt
Trabajo Practico/punto 3/example/: main.cpp
punto 1/: CMakeLists.txt  compilacion.txt  main  pokedex.h  pokedexMapTest  pokemon.cpp  pokemon.h  pokemonInfo.cpp  pokemonInfo.h
punto 1/Pokedex/: pokedex.cpp  pokedex.h
punto 1/Pokemon/: pokemon.h
punto 1/PokemonInfo/: pokemonInfo.cpp  pokemonInfo.h
punto 1/ejemplos/: main.cpp
punto 1/example/: main.cpp
punto 1/headers/: pokedex.h  pokemon.h  pokemonInfo.h
punto 1/include/: pokedex.h  pokemon.h  pokemonInfo.h
punto 1/sources/: pokedex.cpp  pokemon.cpp  pokemonInfo.cpp
punto 1/src/: pokedex.cpp  pokemon.cpp  pokemonInfo.cpp
punto 2/: CMakeLists.txt
punto 2/example/: main.cpp
punto 2/include/: Hangar.h
punto 2/src/: simulador.cpp
punto 3/: CMakeLists.txt
punto 3/example/: main.cpp
